fmt format for swagger docs
