# docs/swagger.json
@@ -9,65 +9,6 @@
     "host": "localhost:8000",
     "basePath": "/",
     "paths": {
-        "/api/getUserInfo": {
-            "post": {
-                "description": "Создание нового сегмента",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "segment"
-                ],
-                "summary": "createSegment",
-                "operationId": "create-segment",
-                "parameters": [
-                    {
-                        "description": "segment data",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/avito.Segment"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "response",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.customError"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handler.customError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.customError"
-                        }
-                    },
-                    "default": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/handler.customError"
-                        }
-                    }
-                }
-            }
-        },
         "/api/getUserSegments": {
             "post": {
                 "description": "Получение всех сегментов пользователя",
@@ -237,8 +178,8 @@
                 "operationId": "get-user-info",
                 "parameters": [
                     {
-                        "description": "user data",
-                        "name": "user",
+                        "description": "user operations data",
+                        "name": "usr",
                         "in": "body",
                         "required": true,
                         "schema": {
